--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "13.0.3",
@@ -14,11 +15,14 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "4.8.4",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "eslint": "8.22.0",
     "eslint-config-next": "13.0.3",
-    "eslint": "8.22.0"
+    "husky": "8.0.2",
+    "prettier": "2.7.1",
+    "pretty-quick": "3.1.3",
+    "typescript": "4.8.4"
   }
 }
