--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format:staged": "pretty-quick --staged",
     "prepare": "husky install"
   },
   "dependencies": {
