--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
     "marked": "^4.2.2",
     "next": "13.0.3",
@@ -18,6 +19,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/glob": "^8.0.0",
     "@types/marked": "^4.0.7",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
