--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "8.22.0",
     "eslint-config-next": "13.0.3",
     "husky": "8.0.2",
+    "jest": "^29.3.1",
     "prettier": "2.7.1",
     "pretty-quick": "3.1.3",
     "typescript": "4.8.4"
