--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
     "format:staged": "pretty-quick --staged",
     "prepare": "husky install"
   },
@@ -19,7 +20,10 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/glob": "^8.0.0",
+    "@types/jest": "^29.2.3",
     "@types/marked": "^4.0.7",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
@@ -28,6 +32,7 @@
     "eslint-config-next": "13.0.3",
     "husky": "8.0.2",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "prettier": "2.7.1",
     "pretty-quick": "3.1.3",
     "typescript": "4.8.4"
