--- a/package.json
+++ b/package.json
@@ -12,27 +12,27 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "glob": "^8.0.3",
-    "gray-matter": "^4.0.3",
-    "marked": "^4.2.2",
+    "glob": "8.0.3",
+    "gray-matter": "4.0.3",
+    "marked": "4.2.2",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@types/glob": "^8.0.0",
-    "@types/jest": "^29.2.3",
-    "@types/marked": "^4.0.7",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@types/glob": "8.0.0",
+    "@types/jest": "29.2.3",
+    "@types/marked": "4.0.7",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "eslint": "8.22.0",
     "eslint-config-next": "13.0.3",
     "husky": "8.0.2",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "29.3.1",
     "prettier": "2.7.1",
     "pretty-quick": "3.1.3",
     "typescript": "4.8.4"
