--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@stefanprobst/rehype-shiki": "2.2.0",
+    "@vercel/analytics": "0.1.6",
     "glob": "8.0.3",
     "gray-matter": "4.0.3",
     "next": "13.0.3",
