--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -16,9 +16,9 @@
     "@vercel/analytics": "1.0.1",
     "glob": "8.0.3",
     "gray-matter": "4.0.3",
-    "next": "13.4.9",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "15.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "rehype-external-links": "2.0.1",
     "rehype-shiki": "0.0.9",
     "rehype-stringify": "9.0.3",
@@ -33,8 +33,8 @@
     "@types/glob": "8.0.0",
     "@types/jest": "29.2.3",
     "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.8",
+    "@types/react": "18.3.20",
+    "@types/react-dom": "18.3.7",
     "eslint": "8.22.0",
     "eslint-config-next": "13.0.3",
     "husky": "8.0.2",
