--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "check": "biome check .",
+    "check:fix": "biome check . --fix --unsafe",
     "test": "jest",
-    "format:staged": "pretty-quick --staged",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -28,6 +28,7 @@
     "unified": "10.1.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@types/glob": "8.0.0",
@@ -35,13 +36,9 @@
     "@types/node": "18.11.9",
     "@types/react": "18.3.20",
     "@types/react-dom": "18.3.7",
-    "eslint": "8.22.0",
-    "eslint-config-next": "13.0.3",
     "husky": "8.0.2",
     "jest": "29.3.1",
     "jest-environment-jsdom": "29.3.1",
-    "prettier": "2.7.1",
-    "pretty-quick": "3.1.3",
     "typescript": "4.8.4"
   }
 }
