--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/glob": "8.0.0",
     "@types/node": "18.11.9",
     "@types/react": "18.3.20",
     "@types/react-dom": "18.3.7",
     "husky": "8.0.2",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.5",
     "typescript": "4.8.4"
   }
 }
